fix image sizing issues on mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -235,6 +235,7 @@ $hero-bp-vert: 1150px;
     & > img {
       display: block;
       max-width: 100%;
+      height: auto;
     }
   }
 
